# neural-mass-model-epilepsy

./: README.md  pyproject.toml  pyrates_run.py
neural_mass_sim/: simulate_lfp_jansen_rit.py  tvb_epileptor_lfp.py
